# oncampus-server

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build-image-deploy.yml
src/: aws.rs  email.rs  main.rs
src/auth/: mod.rs  token.rs
src/db/: mod.rs
src/middleware/: mod.rs
src/models/: comment.rs  mod.rs  otp.rs  post.rs  profile.rs  user.rs
src/posts/: mod.rs
src/profile/: mod.rs
