[package]
name = "oncampus"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
anyhow = "1.0.93"
aws-config = "1.5.10"
aws-sdk-s3 = "1.64.0"
bcrypt = "0.16.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
lettre = { version = "0.11.10", features = ["tokio1-native-tls", "tracing"] }
libsql = "0.6.0"
log = "0.4.22"
native-tls = "0.2.12"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v6"] }
validator = "0.19.0"
validator_derive = "0.19.0"
